--- a/histogram.html
+++ b/histogram.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="./css/crossvis.css">
   <link rel="stylesheet" type="text/css" href="./js/Semantic-UI/semantic.min.css">
 
-  <title>CrossVis (Histogram View) - Regions Data Visualization</title>
+  <title>CrossVis (Histogram View)</title>
 
   <style>
     @font-face {
