--- a/scatterplot.html
+++ b/scatterplot.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="./css/crossvis.css">
   <link rel="stylesheet" type="text/css" href="./js/Semantic-UI/semantic.min.css">
 
-  <title>CrossVis (Scatterplot View) - Regions Data Visualization</title>
+  <title>CrossVis (Scatterplot View)</title>
 
   <style>
     @font-face {
