--- a/map.html
+++ b/map.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="./css/tabulator.min.css">
   <link rel="stylesheet" type="text/css" href="./js/Semantic-UI/semantic.min.css">
 
-  <title>CrossVis (Map View) - Regions Data Visualization</title>
+  <title>CrossVis (Map View)</title>
 
   <style>
     @font-face {
